SSCSCI-2469 Letter Generation and content for additional other party notification